# mirror-gates

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  NOTES.md  README.md  mirage_demo.ipynb  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug.yaml
.github/workflows/: format-check.yml  tests.yml
src/: __init__.py
src/circuits/: aggression_select.txt  circuit_list.ipynb  d02_syc_cnot.qasm  d02_syc_swap.qasm  debug.txt  iters_select.txt  medium_circuits.txt  rejects.md  rejects.txt  routed.txt  select.txt  small_circuits.txt  twolocal.txt
src/mirror_gates/: cns_sabre_v3.py  cns_transform.py  fast_unitary.py  logging.py  mirage.py  noisy_fidelity.py  pass_managers.py  sabre_layout_v2.py  sqiswap_decomposer.py  sqiswap_equiv.py  sycamore.py  utilities.py
src/mirror_gates/deprecated/: cns_brute.py  cns_brute_v2.py  cns_sa.py  cns_sabre.py  cns_sabre_v2.py  vswap_verbose.py
src/mirror_gates/qiskit/: legacy_plugin.py  mirage_plugins.py  sabre_layout.py  sabre_layout_v2.py  sabre_swap.py
src/notebooks/: bench.ipynb  brute_main.ipynb  circuit_dag.ipynb  debug_bench.ipynb  debug_consolidate.ipynb  debug_vs.ipynb  dev_bench.ipynb  dev_simulation.ipynb  execute_layer.ipynb  explore.ipynb  fid.ipynb  main.ipynb  medium_hh.md  medium_square.md  my_profile.profile  notes.md  results.md  results2.md  sa_main.ipynb  sabre_main.ipynb  small_line.md  weyl.ipynb  weyl_mirrors.ipynb
src/notebooks/deprecated/: brute_main.ipynb  circuit_dag.ipynb  dev_consolidate.ipynb  execute_layer.ipynb  results_01.md  sa_main.ipynb  sabre_main.ipynb  vqe_test.ipynb  weyl_garbage.ipynb
src/notebooks/results/: 01_bench.ipynb  02_post_selection.ipynb  03_aggressions.ipynb  04_iterations.ipynb  05_annealing.ipynb  06_speedups.ipynb  07_topologies.ipynb  aggression.ipynb  aggressions.ipynb  anneal.ipynb  annealing.ipynb  base.eps  bench.ipynb  edge_case.ipynb  iterations.ipynb  iterations.txt  post_selection.ipynb  qft.txt  speedups.ipynb  speedups.txt  topologies.ipynb
src/notebooks/results/main_bench/: 01_HH_bench.ipynb  02_SL_bench.ipynb  r03_HH_CX_bench.ipynb  r04_SL_SYC_bench.ipynb  r05_Nlocal_bench.ipynb
src/notebooks/simulation/: 00_depolarizing.ipynb  01_random.ipynb  02_routed.ipynb  03_fid_bench.ipynb  04_scaling.ipynb
src/notebooks/weyl_mirrors/: 01_weyl_mirrors.ipynb  02_syc_mirrors.ipynb  d02_syc_decomp.ipynb  mirror_coordinate.ipynb  weyl_mirrors.ipynb
src/notebooks/weyl_mirrors/mirror_data/: mirror-sqrt_2.0_iswap-approxFalse-0.99.hdf5  mirror-sqrt_2.0_iswap-approxTrue-0.99.hdf5  mirror-sqrt_2_iswap-0.99.hdf5  mirror-sqrt_2_iswap-1.0.hdf5  mirror-sqrt_3.0_iswap-approxFalse-0.99.hdf5  mirror-sqrt_3.0_iswap-approxTrue-0.99.hdf5  mirror-sqrt_3_iswap-0.99.hdf5  mirror-sqrt_3_iswap-1.0.hdf5  mirror-sqrt_4.0_iswap-0.99.hdf5  mirror-sqrt_4.0_iswap-1.0.hdf5  mirror-sqrt_4.0_iswap-approxFalse-0.99.hdf5  mirror-sqrt_4.0_iswap-approxTrue-0.99.hdf5  mirror-sqrt_4_iswap-0.99.hdf5  mirror-sqrt_4_iswap-1.0.hdf5  no_mirror-sqrt_2.0_iswap-approxFalse-0.99.hdf5  no_mirror-sqrt_2.0_iswap-approxTrue-0.99.hdf5  no_mirror-sqrt_2_iswap-0.99.hdf5  no_mirror-sqrt_2_iswap-1.0.hdf5  no_mirror-sqrt_3.0_iswap-approxFalse-0.99.hdf5  no_mirror-sqrt_3.0_iswap-approxTrue-0.99.hdf5  no_mirror-sqrt_3_iswap-0.99.hdf5  no_mirror-sqrt_3_iswap-1.0.hdf5  no_mirror-sqrt_4.0_iswap-0.99.hdf5  no_mirror-sqrt_4.0_iswap-1.0.hdf5  no_mirror-sqrt_4.0_iswap-approxFalse-0.99.hdf5  no_mirror-sqrt_4.0_iswap-approxTrue-0.99.hdf5  no_mirror-sqrt_4_iswap-0.99.hdf5  no_mirror-sqrt_4_iswap-1.0.hdf5
src/package_name/: __init__.py  main.py
src/tests/: __init__.py  dag_test.py  electron_test.py  pass_test.py  transform_test.py  vswap_test.py
src/virtual-swap/: main.py
src/virtual-swap/scripts/: main.ipynb
src/virtual_swap/: __init__.py  cns_brute.py  cns_sabre.py  cns_sabre_v2.py  cns_sabre_v3.py  cns_sabrev2.py  cns_transform.py  opnode_metadata.py  pass_managers.py  sabre_layout.py  sabre_swap.py  sqiswap_equiv.py  vswap_pass.py  vswap_pass2.py  vswap_simple.py
src/virtual_swap/deprecated/: __init__.py  cns_brute.py  cns_brute_v2.py  cns_sa.py  cns_sabre.py  cns_sabre_v2.py  sabre_swap.py  vswap_dep.py  vswap_pass.py  vswap_simple.py  vswap_verbose.py
src/virtual_swap/qiskit/: sabre_layout.py
src/virtual_swap/scripts/: benchy.ipynb  debug._ir.ipynb  debug_layout.ipynb  debug_vs.ipynb  decomp.ipynb  main.ipynb  weyl.ipynb
