[metadata]
name = mirror-gates
description = My package description
version = 0.1.0
author = Evan McKinney
author_email = evmckinney9@gmail.com

[options]
python_requires = >=3.9
install_requires =
    # XXX see https://github.com/qutip/qutip/issues/2182
    # temporary revert to a known working version
    scipy==1.10.1
    qutip==4.7.1
    # XXX
    numpy
    qiskit
    weylchamber
    matplotlib
    retworkx
    mqt.bench
    python-dotenv
    slam @ git+https://github.com/Pitt-JonesLab/slam_decomposition.git

    # monodromy @ git+https://github.com/evmckinney9/monodromy.git
    # NOTE, monodromy can be installed via git, but during development
    # I want to be able to edit the source code and have it reflected
    # so I install it manually in the Makefile
    # when I'm done, don't forget to update .github/workflows/test.yml

    # transpile_benchy @ git+https://github.com/evmckinney9/transpile_benchy.git
    # NOTE, transpile_benchy installed manually in Makefile
    # unlike monodromy, transpile_benchy cannot be installed via git
    # this is because of the way I reference its submodules

[options.extras_require]
dev =
    pre-commit
    ipykernel
    pylatexenc
    ipympl
    snakeviz
format =
    pre-commit
    black[jupyter]
    isort
    tomli
    pydocstyle
    ruff
    docformatter[tomli]
test =
    pytest
