[metadata]
name = mirror-gates
description = My package description
version = 0.1.0
author = Evan McKinney
author_email = evmckinney9@gmail.com

[options.entry_points]
qiskit.transpiler.routing =
    legacy_sabre = mirror_gates.qiskit.legacy_plugin:LegacySabrePlugin
qiskit.transpiler.layout =
    legacy_layout = mirror_gates.qiskit.legacy_plugin:LegacySabreLayoutPlugin

[options]
python_requires = >=3.9
install_requires =
    # XXX see https://github.com/qutip/qutip/issues/2182
    # temporary revert to a known working version
    scipy==1.10.1
    qutip==4.7.1
    # XXX
    numpy
    qiskit
    weylchamber
    matplotlib
    retworkx
    mqt.bench
    python-dotenv
    slam @ git+https://github.com/Pitt-JonesLab/slam_decomposition.git
    monodromy @ git+https://github.com/evmckinney9/monodromy.git
    transpile_benchy @ git+https://github.com/evmckinney9/transpile_benchy.git

[options.extras_require]
dev =
    pre-commit
    ipykernel
    pylatexenc
    ipympl
    snakeviz
    SciencePlots
    LovelyPlots

format =
    pre-commit
    black[jupyter]
    isort
    tomli
    pydocstyle
    ruff
    docformatter[tomli]
test =
    pytest
