[metadata]
name = mirror-gates
description = My package description
version = 0.1.0
author = Evan McKinney
author_email = evmckinney9@gmail.com

[options.entry_points]
qiskit.transpiler.layout =
    legacy_sabre = mirror_gates.qiskit.mirage_plugins:LegacySabreLayoutPlugin
    sabre_layout_v2 = mirror_gates.qiskit.mirage_plugins:MirageLayoutPlugin
qiskit.transpiler.routing=
    mirage = mirror_gates.qiskit.mirage_plugins:MirageRoutingPlugin

[options]
python_requires = >=3.9
install_requires =
    scipy
    qutip
    numpy
    qiskit
    weylchamber
    matplotlib
    retworkx

[options.extras_require]
core =
    monodromy @ git+https://github.com/evmckinney9/monodromy.git
    transpile_benchy @ git+https://github.com/evmckinney9/transpile_benchy.git
dev =
    pre-commit
    ipykernel
    pylatexenc
    ipympl
    snakeviz
    SciencePlots
    LovelyPlots

format =
    pre-commit
    black[jupyter]
    isort
    tomli
    pydocstyle
    ruff
    docformatter[tomli]
test =
    pytest
